--- a/views/login.ejs
+++ b/views/login.ejs
@@ -33,7 +33,9 @@
   <body class="text-center">
     
     <main class="form-signin text-center shadow-lg p-3">
-        <form id="formLogin" action="/crud" method="POST">
+    
+        <!--Pendiente method="POST"-->
+        <form id="formLogin" action="/crud">
             <img class="mb-4" src="img/placeholder.svg" alt="" width="250" height="200">
             <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
